--- a/search/biased-search/Makefile
+++ b/search/biased-search/Makefile
@@ -1,16 +1,16 @@
 include ../../flags.mk
-SRC = binary_search.h binary_search_test.cc binary_search_benchmark.cc
+SRC = biased_search.h biased_search_test.cc biased_search_benchmark.cc
 
-test: binary_search.h binary_search_test.cc
-	$(CC) $(CFLAGS) -L$(LIB_DIR) -I$(INCLUDE_DIR) binary_search_test.cc $(TEST_FLAGS) -o binary_search_test
-	./binary_search_test
+test: biased_search.h biased_search_test.cc
+	$(CC) $(CFLAGS) -L$(LIB_DIR) -I$(INCLUDE_DIR) biased_search_test.cc $(TEST_FLAGS) -o biased_search_test
+	./biased_search_test
 
-benchmark: binary_search.h binary_search_benchmark.cc
-	$(CC) $(CFLAGS) -L$(LIB_DIR) -I$(INCLUDE_DIR) binary_search_benchmark.cc $(BENCHMARK_FLAGS) -o binary_search_benchmark
-	./binary_search_benchmark
+benchmark: biased_search.h biased_search_benchmark.cc
+	$(CC) $(CFLAGS) -L$(LIB_DIR) -I$(INCLUDE_DIR) biased_search_benchmark.cc $(BENCHMARK_FLAGS) -o biased_search_benchmark
+	./biased_search_benchmark
 
-perf: binary_search.h binary_search_benchmark.cc
-	$(CC) $(CFLAGS) -L$(LIB_DIR) -I$(INCLUDE_DIR) binary_search_benchmark.cc $(PERF_FLAGS) -o binary_search_perf
+perf: biased_search.h biased_search_benchmark.cc
+	$(CC) $(CFLAGS) -L$(LIB_DIR) -I$(INCLUDE_DIR) biased_search_benchmark.cc $(PERF_FLAGS) -o biased_search_perf
 
 format: $(SRC)
 	$(CLANG_FORMAT) $(CLANG_FORMAT_FLAGS) $(SRC)
@@ -22,4 +22,4 @@ cppcheck: $(SRC)
 	$(CPPCHECK) $(CPPCHECK_FLAGS) $(SRC)
 
 clean:
-	rm binary_search_test binary_search_benchmark binary_search_perf perf.data*
+	rm biased_search_test biased_search_benchmark biased_search_perf perf.data*
