--- a/search/binary-search/Makefile
+++ b/search/binary-search/Makefile
@@ -10,7 +10,7 @@ CFLAGS = -std=c++23 -pedantic -Wall -Wextra -fno-rtti -fno-exceptions -no-pie
 SANITIZE_FLAGS = -fsanitize=address -fsanitize=undefined
 OPT_FLAGS = -O3 -march=native -mtune=native -flto=full -falign-loops=64 -mllvm -x86-cmov-converter=false
 
-CLANG_FORMAT_FLAGS = -i -style=Google -sort-includes
+CLANG_FORMAT_FLAGS = -i -sort-includes -style='{BasedOnStyle: Google, UseTab: Never, IndentWidth: 2}'
 
 TEST_FLAGS = $(DEBUG_SYMBOL) $(SANITIZE_FLAGS) -lgtest -lgtest_main $(PTHREAD)
 
