Use libc++ to do benchmark

--- a/data-structures/ordered-set/red-black-tree/Makefile
+++ b/data-structures/ordered-set/red-black-tree/Makefile
@@ -14,7 +14,7 @@ CLANG_FORMAT_FLAGS = -i -sort-includes -style='{BasedOnStyle: Google, UseTab: Ne
 
 TEST_FLAGS = $(DEBUG_SYMBOL) $(SANITIZE_FLAGS) -lgtest -lgtest_main $(PTHREAD)
 
-BENCHMARK_FLAGS = $(OPT_FLAGS) $(PTHREAD) -Wno-vla-cxx-extension -lbenchmark -g
+BENCHMARK_FLAGS = $(OPT_FLAGS) $(PTHREAD) -Wno-vla-cxx-extension -lbenchmark -g -stdlib=libc++
 
 SRC = red_black_tree.h red_black_tree_test.cc red_black_tree_benchmark.cc red_black_tree_standard.h red_black_tree_standard_link.h
 
